# prism-kit

./: .clang-format  .clang-format-ignore  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  prj.conf  prj.debug.conf  prj.noopt.conf  pyproject.toml  west.yml
.githooks/: commit-msg  pre-commit
.github/: copilot-instructions.md
.github/prompts/: generate-commit-message.prompt.md
app/: CMakeLists.txt
app/controller/: controller.cpp  instructions.cpp  timed_instruction_extension.md
app/include/app/: app.h  app.hpp  task_runtime_reporter.hpp
app/src/: app_hw.cpp  blink_app.cpp  prism_hw_backend.cpp  prism_hw_backend_internal.hpp  prism_hw_executor.hpp  prism_hw_mailbox.hpp  task_runtime_reporter.cpp
app/src/hw/: command_manager.cpp  command_manager.hpp  controller_command.hpp  controller_command_sink.cpp  controller_command_sink.hpp  hw.md  hw_constants.hpp  hw_coordinator.hpp  hw_task.cpp  hw_task.hpp  shared_frame.hpp  status_led.cpp  status_led.hpp  strip_manager.cpp  strip_manager.hpp
bal/: CMakeLists.txt
bal/include/bal/: bootstrap.h  bootstrap.hpp  led.h  led.hpp  rgb_led.hpp  ws2812_strip.hpp
bal/src/: board_led.cpp  board_led_internal.hpp  board_led_seeeduino_xiao.cpp  board_pin_map_seeeduino_xiao.cpp  board_ws2812.cpp  board_ws2812_internal.hpp  board_ws2812_seeeduino_xiao.cpp  bootstrap.cpp  led.cpp  led_internal.hpp  pin_map.hpp  ws2812.cpp  ws2812_internal.hpp
bal/src/seeeduino_xiao/: led.cpp  pin_map.cpp  ws2812.cpp
boards/: seeeduino_xiao.overlay
docs/: architecture.md
hal/: CMakeLists.txt
hal/include/hal/: gpio.h  system.h
hal/src/: gpio_zephyr.c  system_zephyr.c
include/prism/: color.hpp  controller.hpp  strip.hpp  time.hpp
include/status/: status.h
osal/: CMakeLists.txt
osal/include/osal/: time.h  time.hpp
osal/src/: time_zephyr.cpp
oshal/: CMakeLists.txt
oshal/include/oshal/: debug_port.hpp  gpio.h  gpio.hpp  pwm.h  pwm.hpp  samd21_resources.hpp  status.h  system.h  task.hpp  time.h  time.hpp  ws2812.hpp
oshal/src/: debug_port_cdc_acm.cpp  debug_port_cdc_acm_internal.hpp  debug_port_zephyr.cpp  debug_port_zephyr_internal.hpp  gpio_zephyr.c  gpio_zephyr.cpp  gpio_zephyr_internal.hpp  pwm_backend.h  pwm_samd21.c  pwm_samd21.cpp  pwm_samd21_internal.hpp  samd21.cpp  samd21_bridge.h  samd21_dmac_channel.cpp  samd21_dmac_channel.hpp  samd21_pwm.cpp  samd21_pwm_internal.hpp  samd21_ws2812.cpp  samd21_ws2812_internal.hpp  system_zephyr.c  task_zephyr.cpp  time_zephyr.cpp  zephyr_debug_port.cpp  zephyr_debug_port_cdc_acm.cpp  zephyr_debug_port_cdc_acm_internal.hpp  zephyr_debug_port_internal.hpp  zephyr_gpio.cpp  zephyr_gpio_internal.hpp  zephyr_samd21_dmac_channel.cpp  zephyr_samd21_dmac_channel.hpp  zephyr_system.c
oshal/src/task/: task_stats_zephyr.cpp  task_zephyr.cpp  task_zephyr_internal.hpp  zephyr_task.cpp  zephyr_task_internal.hpp  zephyr_task_stats.cpp
protocol/: CMakeLists.txt  readme.md
protocol/include/: frame.hpp  protocol.hpp  tags.hpp
protocol/src/: protocol.cpp
protocol/tests/: CMakeLists.txt  test_protocol.cpp
scripts/: __init__.py  build-local.cmd  build-local.py  build-local.sh  build.py  flash.py  format.py  install_git_hooks.py  lint.py  lint_python.py  rainbow.py  smoke_test.py  unit-tests.py  unit_tests.py
scripts/modules/: __init__.py  protocol.py  serial_utils.py
src/: boot_handoff_zephyr.c  boot_handoff_zephyr.cpp  main.c
tests/: CMakeLists.txt  controller_test.cpp  mock_strip.hpp
